--- a/src/signin.css
+++ b/src/signin.css
@@ -5,12 +5,15 @@ body {
 }
 
 body {
+  /*display: flex;*/
   /*align-items: center;*/
   /*padding-top: 40px;
   padding-bottom: 40px; */
   background-color: #f5f5f5;
   font-family: Helvetica, Arial, sans-serif;
   background-image: url("testpic.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .form-signin {
@@ -23,7 +26,7 @@ body {
 
 
 .form-signin input{
-  font: normal normal normal 22px/30px Helvetica;
+  font: normal normal normal 22px/30px Helvetica !important;
   opacity: 0.7;
 }
 
